--- a/tutorial/dlr_columns_txt.css
+++ b/tutorial/dlr_columns_txt.css
@@ -6,8 +6,8 @@
    Tutorial Case
 
    Columns Style Sheet
-   Author: 
-   Date:   
+    Author: Connor , Jenna
+      Date:   11/ 20/ 28 
 
    Filename:         dlr_columns.css
 
