--- a/case1/mi_tables.css
+++ b/case1/mi_tables.css
@@ -14,38 +14,55 @@
 */
 
 /* Table Styles */
-table {
+table#pricing{
 	background: linear-gradient(rgb(190, 215, 255) 10%, black);
 	border: 5px solid grey;
+	width: 100%
 }
 
 table th, table td {
 	border: 3px solid grey;
-	line-height: 1.4 em;
+	line-height: 1.4em;
 	padding: 8px;
 }
 
-thead th {
+ table th {
 	background-color: black;
 	color: rgb( 130,210,255);
 	font-weight: normal;
 }
 
-td {
+table td {
 	color: white;
-	font-size: 0.9 em;
-	text-align: top;
+	font-size: 0.9em;
+	vertical-align: top;
 	
 }
 
 /* Column Styles */
 
-
+col#firstCol {
+	width: 24%;
+}
+	
+col.dataCols {
+	width: 19%;
+}
 
 /* Table Header Styles */
 
+table thead  tr{
+	height: 60px;
+}
 
+table thead tr:first-of-type th:first-of-type{
+	font-size: 2em;
+}
 
+table thead tr:first-of-type th:not(:first-of-type) {
+	background-color: transparent;
+	color: black;
+}
 
 
 
