--- a/case2/jpf_sudoku.css
+++ b/case2/jpf_sudoku.css
@@ -6,8 +6,8 @@
    Case Problem 2
 
    Sudoku Style Sheet
-   Author: 
-   Date:   
+   Author: Kenaz & Lauren(absent)
+	Date:   11/27/18   
 
    Filename:         jpf_sudoku.css
 
