--- a/review/dlr_styles2.css
+++ b/review/dlr_styles2.css
@@ -6,6 +6,8 @@
    Review Assignment
 
    DLR General Style Sheet
+	Author: connor, jenna 
+	Date:   11-26-18
   
    Filename:         dlr_styles2.css
 
